--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eosjs-ecc",
+  "name": "pefish-eosjs-ecc",
   "version": "4.0.6",
   "description": "Elliptic curve cryptography functions",
   "keywords": [
